--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/server.js"
+    "dev": "nodemon api/server.js",
+    "start":"api/server.js"
   },
   "repository": {
     "type": "git",
